gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test22298.d
version https://git-lfs.github.com/spec/v1
oid sha256:73fc1d67bddcfc65cf98a122823ffedbe469bb3d281b8b944d9b58cbb7939579
size 545
